crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__multipart_upload_client.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { UploadAvatarBody, UploadResult } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async uploadAvatar(body: UploadAvatarBody): Promise<UploadResult> {
    const formData = new FormData();
    formData.append("avatar", body.avatar);
    formData.append("caption", String(body.caption));
    const response = await fetch(`${baseUrl}/api/avatar`, {
      method: "POST",
      body: formData,
    });
    if (!response.ok) {
      await response.body?.cancel().catch(() => undefined);
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    return (await response.json()) as UploadResult;
  },
};
