crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__multipart_upload_handlers.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.handlers
---
// Generated by Phoenix Gen — implement the handler methods below.

import type { UploadAvatarBody, UploadResult } from "./types";

export interface Handlers {
  uploadAvatar(body: UploadAvatarBody): Promise<UploadResult>;
}
