crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__multiple_endpoints_client.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { CreateUserBody, User } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async listUsers(): Promise<User[]> {
    const response = await fetch(`${baseUrl}/api/users`, {
      method: "GET",
    });
    if (!response.ok) {
      await response.body?.cancel().catch(() => undefined);
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    return (await response.json()) as User[];
  },

  async createUser(body: CreateUserBody): Promise<User> {
    const response = await fetch(`${baseUrl}/api/users`, {
      method: "POST",
      headers: { "Content-Type": "application/json" },
      body: JSON.stringify(body),
    });
    if (!response.ok) {
      await response.body?.cancel().catch(() => undefined);
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    return (await response.json()) as User;
  },

  async getUser(id: string): Promise<User> {
    const response = await fetch(`${baseUrl}/api/users/${id}`, {
      method: "GET",
    });
    if (!response.ok) {
      await response.body?.cancel().catch(() => undefined);
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    return (await response.json()) as User;
  },

  async deleteUser(id: string): Promise<void> {
    const response = await fetch(`${baseUrl}/api/users/${id}`, {
      method: "DELETE",
    });
    if (!response.ok) {
      await response.body?.cancel().catch(() => undefined);
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    await response.body?.cancel().catch(() => undefined);
  },
};
