crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__multiple_endpoints_handlers.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.handlers
---
// Generated by Phoenix Gen — implement the handler methods below.

import type { CreateUserBody, User } from "./types";

export interface Handlers {
  listUsers(): Promise<User[]>;
  createUser(body: CreateUserBody): Promise<User>;
  getUser(id: string): Promise<User>;
  deleteUser(id: string): Promise<void>;
}
