crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__multiple_path_params_client.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { Comment } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async getComment(userId: string, postId: string): Promise<Comment> {
    const response = await fetch(
      `${baseUrl}/api/users/${userId}/posts/${postId}`,
      {
        method: "GET",
      },
    );
    if (!response.ok) {
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    return (await response.json()) as Comment;
  },
};
