crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__multiple_path_params_handlers.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.handlers
---
// Generated by Phoenix Gen — implement the handler methods below.

import type { Comment } from "./types";

export interface Handlers {
  getComment(userId: string, postId: string): Promise<Comment>;
}
