crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__offset_pagination_handlers.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.handlers
---
// Generated by Phoenix Gen — implement the handler methods below.

import type { ListPostsPage } from "./types";

export interface Handlers {
  listPosts(query: { page: number; limit: number }): Promise<ListPostsPage>;
}
